--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.80.0",
+    "@react-three/flex": "^1.0.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@types/three": "^0.154.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "gltfjsx": "^6.2.10",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.155.0",
     "typescript": "5.1.6"
   }
 }
