--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.80.0",
+    "@react-three/drei": "^9.114.4",
     "@react-three/flex": "^1.0.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -18,11 +18,13 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "gltfjsx": "^6.2.10",
-    "next": "13.4.12",
+    "next": "^14.2.15",
+    "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-three-fiber": "^6.0.13",
-    "three": "^0.155.0",
+    "three": "^0.169.0",
+    "three-mesh-bvh": "^0.8.2",
     "typescript": "5.1.6"
   }
 }
