--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.114.4",
-    "@react-three/fiber": "8.18.0",
-    "@react-three/flex": "^1.0.1",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "@types/three": "^0.154.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "@react-three/drei": "10.7.5",
+    "@react-three/fiber": "9.3.0",
+    "@react-three/uikit": "0.8.21",
+    "@types/node": "^24.3.1",
+    "@types/three": "^0.180.0",
+    "eslint": "^9.35.0",
     "gltfjsx": "^6.2.10",
-    "next": "^14.2.15",
+    "next": "15.5.2",
     "next-sitemap": "^4.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "three": "^0.169.0",
-    "three-mesh-bvh": "^0.8.2",
-    "typescript": "5.1.6"
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "three": "^0.180.0",
+    "three-mesh-bvh": "^0.9.1"
+  },
+  "devDependencies": {
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
+    "eslint-config-next": "15.5.2",
+    "typescript": "5.9.2"
   }
 }
