--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "@types/react-dom": "19.1.9",
     "eslint-config-next": "15.5.2",
     "typescript": "5.9.2"
-  }
+  },
+  "engines": {
+  "node": ">=22 <25"
+}
 }
